--- a/Инструкция.md
+++ b/Инструкция.md
@@ -2,11 +2,12 @@
 
 Программа создана для отработки навыков в решении простых математических задачи.
 
-Чтобы запустить программу нужно скачать её с репозитория, зайти в папку и запустить файл main.exe.
 
-При запуске вас встречает окно регистрации, но можно перейти на авторизацию по нажатию кнопки «Вход» и обратно 
+Чтобы запустить программу нужно скачать её с репозитория с ветки "master", зайти в папку и запустить файл main.exe.
 
-при нажатии кнопки «Регистрация».
+При запуске вас встречает окно регистрации, но можно перейти на авторизацию по нажатию кнопки "Вход" и обратно 
+
+при нажатии кнопки "Регистрация".
 
 Требования к логину:
 
@@ -20,9 +21,9 @@
 - хотя бы одну заглавную букву, хотя бы одну цифру;
 - Пароль должен содержать хотя бы один из следующих специальных символов: @, $, !, %, \*, ?, &;
 
-После успешной авторизации или регистрации пользователя откроется окно «Профиль». Здесь отображается вся информация о пользователе. При нажатии кнопки «настройки» можно задать или изменить фамилию, имя, отчество и возраст. При нажатии кнопки “информация” пользователю отображается информация о нём в профиле.
+После успешной авторизации или регистрации пользователя откроется окно "Профиль". Здесь отображается вся информация о пользователе. При нажатии кнопки «настройки» можно задать или изменить фамилию, имя, отчество и возраст. При нажатии кнопки “информация” пользователю отображается информация о нём в профиле.
 
-При нажатии кнопки “приступить”открывается окно Параметры, где можно настроить генерацию математических примеров. По желанию вы можете вернуться назад.
+При нажатии кнопки "приступить" открывается окно Параметры, где можно настроить генерацию математических примеров. По желанию вы можете вернуться назад.
 
-После того как вы решили все примеры нажимаете на кнопку “проверить” и будет отображено какие примеры решены верно, а какие нет. По желанию вы можете вернуться назад.
+После того как вы решили все примеры нажимаете на кнопку "проверить" и будет отображено какие примеры решены верно, а какие нет. По желанию вы можете вернуться назад.
 
